--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -66,7 +66,24 @@
         </ul>
       </section>
 
-      <section></section>
+      <section class="contentsSec">
+        <article>
+          <iframe
+            title="#"
+            width="600"
+            height="360"
+            src="https://www.youtube.com/embed/CWTwiE15pdY"
+          >
+            <a href="../images/iframe.jpg" target="img">
+              <img src="../images/iframe.jpg" alt="iframe" />
+            </a>
+          </iframe>
+
+          <div class="besideIframe">
+            <p>GIFT FOR MEMORY</p>
+          </div>
+        </article>
+      </section>
     </main>
   </body>
 </html>
