--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Single+Day&family=Ubuntu:wght@300;400;500;700&display=swap");
+
 /* reset */
 a {
   text-decoration: none;
@@ -68,3 +70,25 @@ li {
 }
 
 /* 컨텐츠 2 */
+.contentsSec {
+  padding: 4% 0;
+}
+
+.contentsSec article {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.besideIframe {
+  background: url("../images/milkway.png") no-repeat content-box;
+  width: 600px;
+}
+
+.besideIframe p {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 2em;
+  padding: 60px;
+  color: rgb(196, 129, 42);
+  font-weight: 900;
+}
