--- a/src/views/register/register.css
+++ b/src/views/register/register.css
@@ -1,3 +1,59 @@
+@import url("https://fonts.googleapis.com/css2?family=Single+Day&family=Ubuntu:wght@300;400;500;700&display=swap");
+
+/* reset */
+a {
+  text-decoration: none;
+}
+a:link {
+  text-decoration: none;
+  color: black;
+}
+ol,
+ul,
+li {
+  list-style: none;
+}
+
+/* 레이아웃 */
+#headerWrap {
+  max-width: 100%;
+}
+
+/* 헤더 */
+.headerTop {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  height: 100px;
+  background-color: burlywood;
+}
+
+.headerTop img {
+  width: 44px;
+  height: 44px;
+}
+
+.headerTop h1 {
+  font-size: 2em;
+}
+
+.util ul {
+  display: flex;
+  gap: 20px;
+}
+
+/* GNB */
+.gnb {
+  background-color: #f0e3f9;
+  padding: 20px 0;
+}
+
+.gnb ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .register-user-form-container {
   display: flex;
   align-items: center;
