--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>쇼핑-데모</title>
+    <title>ojakku</title>
     <!-- 아이콘 -->
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/elice-rabbit-favicon.png"
+      href="../sample_fav.png"
     />
     <!-- bulma css 관련 -->
     <link
@@ -32,49 +32,82 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">쇼핑-데모</span>
-          </a>
+    <header id="headerWrap">
+      <nav>
+        <div class="headerTop">
+          <img src="../elice-rabbit.png" alt="logo" />
+          <h1>오작뀨</h1>
 
-          <a
-            role="button"
-            class="navbar-burger"
-            aria-label="menu"
-            aria-expanded="false"
-            data-target="navbarBasicExample"
-          >
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
-
-        <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
+          <div class="util">
+            <ul>
               <li><a href="/login">로그인</a></li>
-              <li>
-                <a href="/cart" aria-current="page">
-                  <span class="icon">
-                    <i class="fas fa-cart-shopping"></i>
-                  </span>
-                  <span>카트</span>
-                </a>
-              </li>
+              <li><a href="/register">회원가입</a></li>
+              <li><a href="/cart">장바구니</a></li>
+              <li><a href="/mypage">내 정보</a></li>
             </ul>
           </div>
         </div>
-      </div>
-    </nav>
+
+        <div class="gnb">
+          <ul>
+            <li><a href="#">ABOUT US</a></li>
+            <li><a href="#">팔찌</a></li>
+            <li><a href="#">반지</a></li>
+            <li><a href="#">목걸이</a></li>
+            <li><a href="#">내 탄생석은?</a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <article>
+        <img src="../images/visualBanner1.png" alt="visulaImage" />
+      </article>
+    </header>
+    
 
     <!-- 회원가입 폼(Form) -->
     <div class="register-user-form-container">
       <form class="box register-user-form-box" id="registerUserForm">
         <p class="title is-5 has-text-primary">환영합니다!</p>
+        <div class="field">
+          <label class="label" for="idInput">아이디</label>
+          <div class="control">
+            <input
+              class="input"
+              id="idInput"
+              type="text"
+              placeholder="elice"
+              autocomplete="on"
+            />
+          </div>
+        </div>
+        
+        <div class="field">
+          <label class="label" for="passwordInput">비밀번호</label>
+          <div class="control">
+            <input
+            class="input"
+            id="passwordInput"
+            type="password"
+            placeholder="********"
+            autocomplete="off"
+            />
+          </div>
+        </div>
+        
+        <div class="field">
+          <label class="label" for="passwordConfirmInput">비밀번호 확인</label>
+          <div class="control">
+            <input
+            class="input"
+            id="passwordConfirmInput"
+            type="password"
+            placeholder="********"
+            autocomplete="off"
+            />
+          </div>
+        </div>
+
         <div class="field">
           <label class="label" for="fullNameInput">이름</label>
           <div class="control">
@@ -87,13 +120,13 @@
             />
           </div>
         </div>
-
+        
         <div class="field">
           <label class="label" for="emailInput">이메일</label>
           <div class="control">
             <input
-              class="input"
-              id="emailInput"
+            class="input"
+            id="emailInput"
               type="email"
               placeholder="abc@example.com"
               autocomplete="on"
@@ -102,27 +135,40 @@
         </div>
 
         <div class="field">
-          <label class="label" for="passwordInput">비밀번호</label>
+          <label class="label" for="phonNumberInput">휴대폰 번호</label>
           <div class="control">
             <input
-              class="input"
-              id="passwordInput"
-              type="password"
-              placeholder="********"
-              autocomplete="off"
+            class="input"
+            id="phonNumberInput"
+            type="tel"
+            placeholder="01012341234"
+            autocomplete="off"
+            />
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label" for="addressInput">주소</label>
+          <div class="control">
+            <input
+            class="input"
+            id="addressInput"
+            type="text"
+            placeholder="OO시 OO구 OO동"
+            autocomplete="off"
             />
           </div>
         </div>
 
         <div class="field mb-5">
-          <label class="label" for="passwordConfirmInput">비밀번호 확인</label>
+          <label class="label" for="detailedAddressInput">상세주소</label>
           <div class="control">
             <input
-              class="input"
-              id="passwordConfirmInput"
-              type="password"
-              placeholder="********"
-              autocomplete="off"
+            class="input"
+            id="detailedAddressInput"
+            type="text"
+            placeholder=""
+            autocomplete="off"
             />
           </div>
         </div>
