--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -1,19 +1,94 @@
-.div-container {
+@import url("https://fonts.googleapis.com/css2?family=Single+Day&family=Ubuntu:wght@300;400;500;700&display=swap");
+
+/* reset */
+a {
+  text-decoration: none;
+}
+a:link {
+  text-decoration: none;
+  color: black;
+}
+ol,
+ul,
+li {
+  list-style: none;
+}
+
+/* 레이아웃 */
+#headerWrap {
+  max-width: 100%;
+}
+
+/* 헤더 */
+.headerTop {
   display: flex;
+  flex-direction: row;
+  justify-content: space-around;
   align-items: center;
+  height: 100px;
+  background-color: burlywood;
+}
+
+.headerTop img {
+  width: 44px;
+  height: 44px;
+}
+
+.headerTop h1 {
+  font-size: 2em;
+}
+
+.util ul {
+  display: flex;
+  gap: 20px;
+}
+
+/* GNB */
+.gnb {
+  background-color: #f0e3f9;
+  padding: 20px 0;
+}
+
+.gnb ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/* 메인 */
+#mainWrap {
+  max-width: 100%;
+}
+
+/* 컨텐츠 1 */
+.contentsOne {
+  padding-top: 4%;
+}
+
+.contentsOne ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/* 컨텐츠 2 */
+.contentsSec {
+  padding: 4% 0;
+}
+
+.contentsSec article {
+  display: flex;
   justify-content: center;
-  height: 100vh;
+  gap: 20px;
 }
 
-.landing {
-  cursor: pointer;
-  border: 1px solid red;
-  padding: 10px;
+.besideIframe {
+  background: url("../images/milkway.png") no-repeat content-box;
+  width: 600px;
 }
 
-.greeting {
-  cursor: pointer;
-  border: 1px solid blue;
-  padding: 10px;
-  margin-left: 3rem;
+.besideIframe p {
+  font-family: "Ubuntu", sans-serif;
+  font-size: 2em;
+  padding: 60px;
+  color: rgb(196, 129, 42);
+  font-weight: 900;
 }
