--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>오작뀨</title>
 
-    <!-- bulma css -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
-    />
-
     <script
       defer
       src="https://kit.fontawesome.com/9daa42bcef.js"
@@ -80,7 +74,17 @@
           </iframe>
 
           <div class="besideIframe">
-            <p>GIFT FOR MEMORY</p>
+            <div>
+              <p>
+                GIFT FOR MEMORY<br/>
+                <span class="subText">당신의 소중한 사람에게 <br/> 단 하나뿐인 기억을 선물하세요. <br/></span>
+                <span class="hashTag">
+                  #세상에하나뿐인둘만의추억#선물#기억을선물한다<br/>
+                  #커스텀쥬얼리#기념선물
+                </span>
+              </p>
+              
+            </div>
           </div>
         </article>
       </section>
