--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+@import "./reset.css";
 @import url("https://fonts.googleapis.com/css2?family=Single+Day&family=Ubuntu:wght@300;400;500;700&display=swap");
 
 /* reset */
@@ -26,7 +28,7 @@ li {
   justify-content: space-around;
   align-items: center;
   height: 100px;
-  background-color: #9D50BB;
+  background-color: #9d50bb;
   color: white;
 }
 
@@ -44,7 +46,7 @@ li {
   gap: 20px;
 }
 
-.util ul li a{
+.util ul li a {
   color: #fff;
   font-weight: 600;
 }
@@ -53,7 +55,7 @@ li {
 .gnb {
   background-color: #fff;
   padding: 20px 0;
-  border-bottom: 6px solid #9D50BB;
+  border-bottom: 6px solid #9d50bb;
 }
 
 .gnb ul {
@@ -62,11 +64,11 @@ li {
 }
 
 /* 비주얼 배너 */
-#headerWrap article{
+#headerWrap article {
   max-width: 100%;
 }
 
-#headerWrap article img{
+#headerWrap article img {
   max-width: 100%;
 }
 
@@ -101,9 +103,9 @@ li {
   width: 600px;
 }
 
-.besideIframe div{
+.besideIframe div {
   width: 500px;
-  padding: 20px 0;
+  padding: 60px;
   line-height: 1;
 }
 
@@ -112,16 +114,129 @@ li {
   font-size: 2.2em;
   color: purple;
   font-weight: 400;
-  border: 1px solid purple;
-  padding: 10px;
 }
 
-.besideIframe p .subText{
-  color: gray;
+.besideIframe p .subText {
+  color: rgb(82, 82, 82);
   font-size: 28px;
 }
 
-.besideIframe .hashTag{
+.besideIframe .hashTag {
   color: gray;
   font-size: 16px;
+  display: inline-flex;
+}
+
+/* 신상품 리스트 */
+.newArrival {
+  padding-bottom: 4%;
+  text-align: center;
+}
+
+.newArrival strong {
+  font-size: 1.8em;
+}
+
+/* 푸터 */
+footer {
+  width: 100%;
+  padding-top: 100px;
+}
+
+footer article {
+  border-top: 1px solid #d2d2d2;
+  padding: 20px 0;
+}
+
+footer article ul {
+  display: flex;
+  justify-content: center;
+  gap: 80px;
+}
+
+footer article ul li {
+  font-size: 30px;
+}
+
+footer article ul li:first-child a {
+  color: red;
+}
+
+footer article ul li:nth-of-type(2) a {
+  background: linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+footer article ul li:nth-of-type(3) a {
+  color: #4267b2;
+}
+
+footer article ul li:nth-of-type(4) a {
+  color: #2db400;
+}
+
+footer article ul li:nth-of-type(5) a {
+  border-radius: 50%;
+  color: orangered;
+  text-decoration: dotted;
+}
+
+footer article ul li:last-child a {
+  color: #1da1f2;
+}
+
+footer address {
+  background-color: #444b55;
+  padding-top: 40px;
+}
+
+footer address .addressLink {
+  display: flex;
+  gap: 10px;
+}
+
+footer address .addressLink li {
+  padding-right: 10px;
+  border-right: 1px solid #a0a0a0;
+}
+
+.addressLink li:nth-of-type(4) a,
+.addressLink li:nth-of-type(5) a,
+.addressLink li:last-child a {
+  color: #d1d1d1;
+}
+
+footer address .addressLink li:first-child {
+  margin-left: 40px;
+}
+
+footer address .addressLink li a {
+  color: #8e8e8e;
+  font-size: 12px;
+}
+
+address .addressText {
+  padding: 20px 0;
+  line-height: 1.4;
+  color: #8e8e8e;
+  font-size: 12px;
+  margin-left: 40px;
+}
+
+address .addressText p:first-child {
+  text-transform: uppercase;
+}
+
+.addressText .copyLight {
+  font-size: 1.2em;
+  font-weight: 700;
 }
