--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -76,18 +76,104 @@
           <div class="besideIframe">
             <div>
               <p>
-                GIFT FOR MEMORY<br/>
-                <span class="subText">당신의 소중한 사람에게 <br/> 단 하나뿐인 기억을 선물하세요. <br/></span>
+                GIFT FOR MEMORY<br />
+                <span class="subText"
+                  >당신의 소중한 사람에게 <br />
+                  단 하나뿐인 기억을 선물하세요. <br />
+                </span>
                 <span class="hashTag">
-                  #세상에하나뿐인둘만의추억#선물#기억을선물한다<br/>
-                  #커스텀쥬얼리#기념선물
+                  #세상에하나뿐인둘만의추억#선물#기억을선물한다<br />#커스텀쥬얼리#기념선물
                 </span>
               </p>
-              
             </div>
           </div>
         </article>
       </section>
+
+      <section class="newArrival">
+        <strong>NEW ARRIVAL</strong>
+        <article></article>
+      </section>
     </main>
+
+    <footer>
+      <article>
+        <ul>
+          <li>
+            <a href="https://www.youtube.com/user/withEverland"
+              ><i class="fa-brands fa-youtube"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/witheverland/"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/witheverland"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://blog.naver.com/witheverland"
+              ><i class="fa-brands fa-blogger"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.witheverland.com/"
+              ><i class="fa-solid fa-t"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/witheverland"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+          </li>
+        </ul>
+      </article>
+      <address>
+        <ul class="addressLink">
+          <li>
+            <a href="#">오작뀨 쥬얼리 몰 소개</a>
+          </li>
+          <li>
+            <a href="#">이용약관</a>
+          </li>
+          <li>
+            <a href="#">이메일주소 무단수집 거부</a>
+          </li>
+          <li>
+            <a href="#">채용</a>
+          </li>
+
+          <li>
+            <a href="#">사이트맵</a>
+          </li>
+        </ul>
+
+        <div class="addressText">
+          <p>
+            english speaking club at church street library (in-person and
+            online), 처치 스트리트 도서관
+          </p>
+          <p>
+            대표이사 : 유의석 | 사업자등록번호 : 110-3030-2020 | 통신판매업
+            신고번호 : 2007-London-3203 | 사업자정보확인
+          </p>
+          <p>
+            <strong style="font-size: 14px; font-weight: 600; cursor: pointer"
+              >고객상담센터</strong
+            >
+            : 031-320-5000(유료) |
+            <span style="color: #d1d1d1; font-weight: 600; cursor: pointer"
+              >개인정보처리방침 | 방침 개정 안내 | 입찰공고</span
+            >
+          </p>
+          <p class="copyLight">
+            Copyright © 오작뀨 Corporation. All rights reserved.
+          </p>
+        </div>
+      </address>
+    </footer>
   </body>
 </html>
