--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -49,43 +49,76 @@
           </ul>
         </div>
       </nav>
-
-      <!-- <article>
-        <img src="../images/visualBanner1.png" alt="visulaImage" />
-      </article> -->
     </header>
 
-    <main role="main" id="mainWrap">
-      <!-- <section class="contentsOne">
-        <ul>
-          <li>
-            <img src="../images/eventContents1.png" alt="Fast shipping" />
-          </li>
-          <li><img src="../images/eventContents2.png" alt="Review event" /></li>
-          <li><img src="../images/eventContents3.png" alt="Custom carve" /></li>
-        </ul>
+    <main role="main" id="mainWrap" class="container is-max-desktop">
+      <section class="title-sub block mt-6">
+        <h2 class="title mb-6">
+          장바구니
+        </h2>
+        <p class="count-products subtitle">
+          총&nbsp;
+          <span class="count-number">3</span>
+          개
+        </p>
       </section>
 
-      <section class="contentsSec">
-        <article>
-          <iframe
-            title="#"
-            width="600"
-            height="360"
-            src="https://www.youtube.com/embed/CWTwiE15pdY"
-          >
-            <a href="../images/iframe.jpg" target="img">
-              <img src="../images/iframe.jpg" alt="iframe" />
-            </a>
-          </iframe>
-
-          <div class="besideIframe">
-            <p>GIFT FOR MEMORY</p>
+      <section class="product-list block">
+        <form class="box block columns is-flex is-align-items-center is-justify-content-space-between">          
+          <div class="is-flex is-align-items-center">
+            <figure class="image is-128x128 is-flex mr-2">
+              <img src="https://bulma.io/images/placeholders/128x128.png" class="mr-2">            
+            </figure>
+            <div>
+              <h3 class="title is-5">
+                [9월탄생석] 쁘띠 디디 골드 목걸이</h3>
+              <p class="subtitle is-7">
+                9월의 탄생석 사파이어입니다. <br>
+                사파이어는 변치 않는 사랑을 약속하는 의미로. <br>
+                연인의 기념일에 어울리는 보석이에요.
+              </p>
+            </div>
           </div>
-        </article>
-      </section> -->
+          <div class="block is-flex is-align-items-center is-justify-content-flex-end">
+              <input class="input is-2 column mr-2" type="text" placeholder="0">
+              <button class="delete column"></button>
+          </div>
+        </form>
 
-
+        <form class="box block columns is-flex is-align-items-center is-justify-content-space-between">          
+          <div class="is-flex is-align-items-center">
+            <figure class="image is-128x128 is-flex mr-2">
+              <img src="https://bulma.io/images/placeholders/128x128.png" class="mr-2">            
+            </figure>
+            <div>
+              <h3 class="title is-5">
+                [9월탄생석] 쁘띠 디디 골드 목걸이</h3>
+              <p class="subtitle is-7">
+                9월의 탄생석 사파이어입니다. <br>
+                사파이어는 변치 않는 사랑을 약속하는 의미로. <br>
+                연인의 기념일에 어울리는 보석이에요.
+              </p>
+            </div>
+          </div>
+          <div class="block is-flex is-align-items-center is-justify-content-flex-end">
+              <input class="input is-2 column mr-2" type="text" placeholder="0">
+              <button class="delete column"></button>
+          </div>
+        </form>
+        
+      </section>
+      <section class="total mb-6">
+          <div class="block">
+            
+          </div>
+        
+          <button class="button">더 구매하기</button>
+          <button class="button">결제하기</button>
+      </section>
     </main>
+
+    <footer class="footer">
+        
+    </footer>
   </body>
 </html>
