Style Complete cart(temp)
use Bulma

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -53,10 +53,8 @@
 
     <main role="main" id="mainWrap" class="container is-max-desktop">
       <section class="title-sub block mt-6">
-        <h2 class="title mb-6">
-          장바구니
-        </h2>
-        <p class="count-products subtitle">
+        <h2 class="title mb-6 has-text-grey-dark has-text-centered">장바구니</h2>
+        <p class="count-products subtitle has-text-right">
           총&nbsp;
           <span class="count-number">3</span>
           개
@@ -64,61 +62,110 @@
       </section>
 
       <section class="product-list block">
-        <form class="box block columns is-flex is-align-items-center is-justify-content-space-between">          
+        <form
+          class="box block columns is-flex is-align-items-center is-justify-content-space-between"
+        >
           <div class="is-flex is-align-items-center">
             <figure class="image is-128x128 is-flex mr-2">
-              <img src="https://bulma.io/images/placeholders/128x128.png" class="mr-2">            
+              <img
+                src="https://bulma.io/images/placeholders/128x128.png"
+                class="mr-2"
+              />
             </figure>
             <div>
-              <h3 class="title is-5">
-                [9월탄생석] 쁘띠 디디 골드 목걸이</h3>
+              <h3 class="title is-5">[9월탄생석] 쁘띠 디디 골드 목걸이</h3>
               <p class="subtitle is-7">
-                9월의 탄생석 사파이어입니다. <br>
-                사파이어는 변치 않는 사랑을 약속하는 의미로. <br>
+                9월의 탄생석 사파이어입니다. <br />
+                사파이어는 변치 않는 사랑을 약속하는 의미로. <br />
                 연인의 기념일에 어울리는 보석이에요.
+              </p>
+              <p class="subtitle is-7 tag is-link is-light">
+                <span>19,000</span>&nbsp;원
               </p>
             </div>
           </div>
-          <div class="block is-flex is-align-items-center is-justify-content-flex-end">
-              <input class="input is-2 column mr-2" type="text" placeholder="0">
-              <button class="delete column"></button>
+          <div
+            class="block is-flex is-align-items-center is-justify-content-flex-end"
+          >
+            <input class="input is-2 column mr-2" type="text" placeholder="0" />
+            <button class="delete column"></button>
           </div>
         </form>
 
-        <form class="box block columns is-flex is-align-items-center is-justify-content-space-between">          
+        <form
+          class="box block columns is-flex is-align-items-center is-justify-content-space-between"
+        >
           <div class="is-flex is-align-items-center">
             <figure class="image is-128x128 is-flex mr-2">
-              <img src="https://bulma.io/images/placeholders/128x128.png" class="mr-2">            
+              <img
+                src="https://bulma.io/images/placeholders/128x128.png"
+                class="mr-2"
+              />
             </figure>
             <div>
-              <h3 class="title is-5">
-                [9월탄생석] 쁘띠 디디 골드 목걸이</h3>
+              <h3 class="title is-5">[9월탄생석] 쁘띠 디디 골드 목걸이</h3>
               <p class="subtitle is-7">
-                9월의 탄생석 사파이어입니다. <br>
-                사파이어는 변치 않는 사랑을 약속하는 의미로. <br>
+                9월의 탄생석 사파이어입니다. <br />
+                사파이어는 변치 않는 사랑을 약속하는 의미로. <br />
                 연인의 기념일에 어울리는 보석이에요.
+              </p>
+              <p class="subtitle is-7 tag is-link is-light">
+                <span>19,000</span>&nbsp;원
               </p>
             </div>
           </div>
-          <div class="block is-flex is-align-items-center is-justify-content-flex-end">
-              <input class="input is-2 column mr-2" type="text" placeholder="0">
-              <button class="delete column"></button>
+          <div
+            class="block is-flex is-align-items-center is-justify-content-flex-end"
+          >
+            <input class="input is-2 column mr-2" type="text" placeholder="0" />
+            <button class="delete column"></button>
           </div>
         </form>
-        
-      </section>
-      <section class="total mb-6">
-          <div class="block">
-            
+
+        <form
+          class="box block columns is-flex is-align-items-center is-justify-content-space-between"
+        >
+          <div class="is-flex is-align-items-center">
+            <figure class="image is-128x128 is-flex mr-2">
+              <img
+                src="https://bulma.io/images/placeholders/128x128.png"
+                class="mr-2"
+              />
+            </figure>
+            <div>
+              <h3 class="title is-5">[9월탄생석] 쁘띠 디디 골드 목걸이</h3>
+              <p class="subtitle is-7">
+                9월의 탄생석 사파이어입니다. <br />
+                사파이어는 변치 않는 사랑을 약속하는 의미로. <br />
+                연인의 기념일에 어울리는 보석이에요.
+              </p>
+              <p class="subtitle is-7 tag is-link is-light">
+                <span>19,000</span>&nbsp;원
+              </p>
+            </div>
           </div>
-        
-          <button class="button">더 구매하기</button>
-          <button class="button">결제하기</button>
+          <div
+            class="block is-flex is-align-items-center is-justify-content-flex-end"
+          >
+            <input class="input is-2 column mr-2" type="text" placeholder="0" />
+            <button class="delete column"></button>
+          </div>
+        </form>
+      </section>
+      <section class="total mt-6">
+        <div class="is-flex is-justify-content-space-between">
+          <div class="block">
+            <h3 class="title is-4 has-text-grey-dark">
+              총액:&nbsp;<span class="has-text-danger">19,000</span>&nbsp;원
+            </h3>
+            <p class="subtitle is-7"></p>
+          </div>
+          <button class="button is-danger is-outlined px-6 py-5">결제하기</button>
+        </div>
+        <button class="button is-danger is-outlined mb-6 px-5">더 구매하기</button>
       </section>
     </main>
 
-    <footer class="footer">
-        
-    </footer>
+    <footer class="footer"></footer>
   </body>
 </html>
