--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -18,7 +18,7 @@
     ></script>
 
     <link rel="stylesheet" href="cart.css" />
-    <script src="home.js" type="module" defer></script>
+    <script src="cart.js" type="module" defer></script>
   </head>
 
   <body class="cart">
@@ -53,7 +53,9 @@
 
     <main role="main" id="mainWrap" class="container is-max-desktop">
       <section class="title-sub block mt-6">
-        <h2 class="title mb-6 has-text-grey-dark has-text-centered">장바구니</h2>
+        <h2 class="title mb-6 has-text-grey-dark has-text-centered">
+          장바구니
+        </h2>
         <p class="count-products subtitle has-text-right">
           총&nbsp;
           <span class="count-number">3</span>
@@ -160,12 +162,94 @@
             </h3>
             <p class="subtitle is-7"></p>
           </div>
-          <button class="button is-danger is-outlined px-6 py-5">결제하기</button>
+          <button class="button is-danger is-outlined px-6 py-5">
+            결제하기
+          </button>
         </div>
-        <button class="button is-danger is-outlined mb-6 px-5">더 구매하기</button>
+        <button class="button is-danger is-outlined mb-6 px-5">
+          더 구매하기
+        </button>
       </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <article>
+        <ul>
+          <li>
+            <a href="https://www.youtube.com/user/withEverland"
+              ><i class="fa-brands fa-youtube"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/witheverland/"
+              ><i class="fa-brands fa-instagram"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/witheverland"
+              ><i class="fa-brands fa-facebook"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://blog.naver.com/witheverland"
+              ><i class="fa-brands fa-blogger"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://www.witheverland.com/"
+              ><i class="fa-solid fa-t"></i
+            ></a>
+          </li>
+          <li>
+            <a href="https://twitter.com/witheverland"
+              ><i class="fa-brands fa-twitter"></i
+            ></a>
+          </li>
+        </ul>
+      </article>
+      <address>
+        <ul class="addressLink">
+          <li>
+            <a href="#">오작뀨 쥬얼리 몰 소개</a>
+          </li>
+          <li>
+            <a href="#">이용약관</a>
+          </li>
+          <li>
+            <a href="#">이메일주소 무단수집 거부</a>
+          </li>
+          <li>
+            <a href="#">채용</a>
+          </li>
+
+          <li>
+            <a href="#">사이트맵</a>
+          </li>
+        </ul>
+
+        <div class="addressText">
+          <p>
+            english speaking club at church street library (in-person and
+            online), 처치 스트리트 도서관
+          </p>
+          <p>
+            대표이사 : 유의석 | 사업자등록번호 : 110-3030-2020 | 통신판매업
+            신고번호 : 2007-London-3203 | 사업자정보확인
+          </p>
+          <p>
+            <strong style="font-size: 14px; font-weight: 600; cursor: pointer"
+              >고객상담센터</strong
+            >
+            : 031-320-5000(유료) |
+            <span style="color: #d1d1d1; font-weight: 600; cursor: pointer"
+              >개인정보처리방침 | 방침 개정 안내 | 입찰공고</span
+            >
+          </p>
+          <p class="copyLight">
+            Copyright © 오작뀨 Corporation. All rights reserved.
+          </p>
+        </div>
+      </address>
+    </footer>
   </body>
 </html>
