Style:update footer style
del) class=footer

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -166,13 +166,13 @@
             결제하기
           </button>
         </div>
-        <button class="button is-danger is-outlined mb-6 px-5">
+        <button class="button is-danger is-outlined mb-4 px-5">
           더 구매하기
         </button>
       </section>
     </main>
 
-    <footer class="footer">
+    <footer>
       <article>
         <ul>
           <li>
