--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>오작뀨</title>
+    <!-- 아이콘 -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../images/sample_fav_img.png"
+    />
 
     <!-- bulma css -->
     <link
