--- a/src/views/home/css/home.css
+++ b/src/views/home/css/home.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import "./reset.css";
+@import "../../styles/reset.css";
 @import url("https://fonts.googleapis.com/css2?family=Single+Day&family=Ubuntu:wght@300;400;500;700&display=swap");
 
 /* reset */
@@ -99,7 +99,7 @@ li {
 }
 
 .besideIframe {
-  background: url("../images/milkway.png") no-repeat content-box;
+  background: url("../../images/milkway.png") no-repeat content-box;
   width: 600px;
 }
 
