--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="./css/home.css" />
     <script src="home.js" type="module" defer></script>
   </head>
 
@@ -20,7 +20,7 @@
     <header id="headerWrap">
       <nav>
         <div class="headerTop">
-          <img src="../elice-rabbit.png" alt="logo" />
+          <img src="../images/elice-rabbit.png" alt="logo" />
           <h1>오작뀨</h1>
 
           <div class="util">
@@ -49,7 +49,9 @@
       </article>
     </header>
 
+    <!-- 메인 -->
     <main role="main" id="mainWrap">
+      <!-- 첫 번째 컨텐츠 -->
       <section class="contentsOne">
         <ul>
           <li>
@@ -60,6 +62,7 @@
         </ul>
       </section>
 
+      <!-- 두 번째 컨텐츠 -->
       <section class="contentsSec">
         <article>
           <iframe
@@ -90,12 +93,14 @@
         </article>
       </section>
 
+      <!-- 세 번째 컨텐츠 -->
       <section class="newArrival">
         <strong>NEW ARRIVAL</strong>
         <article></article>
       </section>
     </main>
 
+    <!-- 푸터 -->
     <footer>
       <article>
         <ul>
