Style:update 폴더구조 반영
css, images, styles

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -24,7 +24,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="cart.css" />
+    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="stylesheet" href="./css/cart.css" />
     <script src="cart.js" type="module" defer></script>
   </head>
 
@@ -76,6 +77,7 @@
         >
           <div class="is-flex is-align-items-center">
             <figure class="image is-128x128 is-flex mr-2">
+              <!-- src="../images/" -->
               <img
                 src="https://bulma.io/images/placeholders/128x128.png"
                 class="mr-2"
