Style:update header from home.html

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -34,7 +34,7 @@
     <header id="headerWrap">
       <nav>
         <div class="headerTop">
-          <img src="../elice-rabbit.png" alt="logo" />
+          <img src="../images/elice-rabbit.png" alt="logo" />
           <h1>오작뀨</h1>
 
           <div class="util">
@@ -57,6 +57,10 @@
           </ul>
         </div>
       </nav>
+
+      <article>
+        <!-- <img src="../images/visualBanner1.png" alt="visulaImage" /> -->
+      </article>
     </header>
 
     <main role="main" id="mainWrap" class="container is-max-desktop">
