--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -96,7 +96,9 @@
       <!-- 세 번째 컨텐츠 -->
       <section class="newArrival">
         <strong>NEW ARRIVAL</strong>
-        <article></article>
+        <article class="productWrap">
+          <ul class="product"></ul>
+        </article>
       </section>
     </main>
 
