--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -24,18 +24,17 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="../styles/reset.css" />
     <link rel="stylesheet" href="./css/cart.css" />
     <script src="cart.js" type="module" defer></script>
   </head>
 
-  <body class="cart">
+  <body>
     <!-- 헤더 -->
     <header id="headerWrap">
       <nav>
         <div class="headerTop">
-          <img src="../images/elice-rabbit.png" alt="logo" />
-          <h1>오작뀨</h1>
+          <img src="../images/sample_logo.png" alt="logo" />
+          <h1><a href="/">오작뀨</a></h1>
 
           <div class="util">
             <ul>
@@ -57,10 +56,6 @@
           </ul>
         </div>
       </nav>
-
-      <article>
-        <!-- <img src="../images/visualBanner1.png" alt="visulaImage" /> -->
-      </article>
     </header>
 
     <main role="main" id="mainWrap" class="container is-max-desktop">
@@ -75,13 +70,12 @@
         </p>
       </section>
 
-      <section class="product-list block">
+      <section>
         <form
           class="box block columns is-flex is-align-items-center is-justify-content-space-between"
         >
           <div class="is-flex is-align-items-center">
             <figure class="image is-128x128 is-flex mr-2">
-              <!-- src="../images/" -->
               <img
                 src="https://bulma.io/images/placeholders/128x128.png"
                 class="mr-2"
@@ -167,6 +161,7 @@
           </div>
         </form>
       </section>
+
       <section class="total mt-6">
         <div class="is-flex is-justify-content-space-between">
           <div class="block">
