--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../sample_fav.png"
+      href="../images/facon.ico"
     />
     <!-- bulma css 관련 -->
     <link
@@ -63,7 +63,6 @@
         <img src="../images/visualBanner1.png" alt="visulaImage" />
       </article>
     </header>
-    
 
     <!-- 회원가입 폼(Form) -->
     <div class="register-user-form-container">
@@ -81,29 +80,29 @@
             />
           </div>
         </div>
-        
+
         <div class="field">
           <label class="label" for="passwordInput">비밀번호</label>
           <div class="control">
             <input
-            class="input"
-            id="passwordInput"
-            type="password"
-            placeholder="********"
-            autocomplete="off"
+              class="input"
+              id="passwordInput"
+              type="password"
+              placeholder="********"
+              autocomplete="off"
             />
           </div>
         </div>
-        
+
         <div class="field">
           <label class="label" for="passwordConfirmInput">비밀번호 확인</label>
           <div class="control">
             <input
-            class="input"
-            id="passwordConfirmInput"
-            type="password"
-            placeholder="********"
-            autocomplete="off"
+              class="input"
+              id="passwordConfirmInput"
+              type="password"
+              placeholder="********"
+              autocomplete="off"
             />
           </div>
         </div>
@@ -120,13 +119,13 @@
             />
           </div>
         </div>
-        
+
         <div class="field">
           <label class="label" for="emailInput">이메일</label>
           <div class="control">
             <input
-            class="input"
-            id="emailInput"
+              class="input"
+              id="emailInput"
               type="email"
               placeholder="abc@example.com"
               autocomplete="on"
@@ -138,11 +137,11 @@
           <label class="label" for="phonNumberInput">휴대폰 번호</label>
           <div class="control">
             <input
-            class="input"
-            id="phonNumberInput"
-            type="tel"
-            placeholder="01012341234"
-            autocomplete="off"
+              class="input"
+              id="phonNumberInput"
+              type="tel"
+              placeholder="01012341234"
+              autocomplete="off"
             />
           </div>
         </div>
@@ -151,11 +150,11 @@
           <label class="label" for="addressInput">주소</label>
           <div class="control">
             <input
-            class="input"
-            id="addressInput"
-            type="text"
-            placeholder="OO시 OO구 OO동"
-            autocomplete="off"
+              class="input"
+              id="addressInput"
+              type="text"
+              placeholder="OO시 OO구 OO동"
+              autocomplete="off"
             />
           </div>
         </div>
@@ -164,11 +163,11 @@
           <label class="label" for="detailedAddressInput">상세주소</label>
           <div class="control">
             <input
-            class="input"
-            id="detailedAddressInput"
-            type="text"
-            placeholder=""
-            autocomplete="off"
+              class="input"
+              id="detailedAddressInput"
+              type="text"
+              placeholder=""
+              autocomplete="off"
             />
           </div>
         </div>
