--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>오작뀨</title>
 
-
     <script
       defer
       src="https://kit.fontawesome.com/9daa42bcef.js"
       crossorigin="anonymous"
     ></script>
 
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../images/facon.ico"
+    />
 
+    <link rel="stylesheet" href="./css/home.css" />
     <script src="home.js" type="module" defer></script>
   </head>
 
@@ -21,7 +27,7 @@
     <header id="headerWrap">
       <nav>
         <div class="headerTop">
-
+          <img src="../images/sample_logo.png" alt="logo" />
           <h1>오작뀨</h1>
 
           <div class="util">
@@ -50,7 +56,9 @@
       </article>
     </header>
 
-
+    <!-- 메인 -->
+    <main role="main" id="mainWrap">
+      <!-- 첫 번째 컨텐츠 -->
       <section class="contentsOne">
         <ul>
           <li>
@@ -61,7 +69,7 @@
         </ul>
       </section>
 
-
+      <!-- 두 번째 컨텐츠 -->
       <section class="contentsSec">
         <article>
           <iframe
@@ -76,7 +84,6 @@
           </iframe>
 
           <div class="besideIframe">
-
             <div>
               <p>
                 GIFT FOR MEMORY<br />
