--- a/src/views/styles/reset.css
+++ b/src/views/styles/reset.css
@@ -1,4 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Single+Day&family=Ubuntu:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Single+Day&family=Stick+No+Bills:wght@400;500;700&display=swap");
+@font-face {
+  font-family: "OKDDUNG";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/OKDDUNG.woff2")
+    format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
 html,
 body,
 div,
@@ -131,10 +139,16 @@ a:link {
   color: black;
 }
 a:visited {
-  color: #d3d3d3;
+  color: purple;
 }
 ol,
 ul,
 li {
   list-style: none;
+}
+h1 {
+  font-family: "OKDDUNG";
+}
+.hidden {
+  visibility: hidden;
 }
