--- a/src/views/home/css/home.css
+++ b/src/views/home/css/home.css
@@ -13,17 +13,17 @@
   justify-content: space-around;
   align-items: center;
   height: 100px;
-  background-color: #9d50bb;
-  color: white;
+  background: #20002c;
 }
 
 .headerTop img {
-  width: 44px;
-  height: 44px;
+  width: 260px;
+  height: 100%;
 }
 
 .headerTop h1 {
   font-size: 2em;
+  color: #fff;
 }
 
 .util ul {
@@ -40,7 +40,7 @@
 .gnb {
   background-color: #fff;
   padding: 20px 0;
-  border-bottom: 6px solid #9d50bb;
+  border-bottom: 2px solid #20002c;
 }
 
 .gnb ul {
