--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>쇼핑-데모</title>
+    <title>로그인</title>
+
     <!-- 아이콘 -->
     <link
       rel="icon"
@@ -11,12 +12,7 @@
       sizes="16x16"
       href="/elice-rabbit-favicon.png"
     />
-    <!-- bulma css 관련 -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
-    />
-    <!-- 폰트 어썸: 아이콘 -->
+
     <script
       defer
       src="https://kit.fontawesome.com/9daa42bcef.js"
@@ -29,79 +25,72 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <img src="/elice-rabbit.png" width="30" height="30" />
-            <span class="has-text-link">쇼핑-데모</span>
-          </a>
+    <header id="headerWrap">
+      <nav>
+        <div class="headerTop">
+          <img src="../images/sample_logo.png" alt="logo" />
+          <h1>오작뀨</h1>
 
-          <a
-            role="button"
-            class="navbar-burger"
-            aria-label="menu"
-            aria-expanded="false"
-            data-target="navbarBasicExample"
-          >
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
-
-        <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
+          <div class="util">
+            <ul>
+              <li><a href="/login">로그인</a></li>
               <li><a href="/register">회원가입</a></li>
-              <li>
-                <a href="/cart" aria-current="page">
-                  <span class="icon">
-                    <i class="fas fa-cart-shopping"></i>
-                  </span>
-                  <span>카트</span>
-                </a>
-              </li>
+              <li><a href="/cart">장바구니</a></li>
+              <li><a href="/mypage">내 정보</a></li>
             </ul>
           </div>
         </div>
-      </div>
-    </nav>
+
+        <div class="gnb">
+          <ul>
+            <li><a href="#">ABOUT US</a></li>
+            <li><a href="#">팔찌</a></li>
+            <li><a href="#">반지</a></li>
+            <li><a href="#">목걸이</a></li>
+            <li><a href="#">내 탄생석은?</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
 
     <!-- 로그인 폼(Form) -->
-    <div class="login-form-container">
-      <form class="box login-form-box" id="loginForm">
-        <p class="title is-5 has-text-info">어서오세요!</p>
-        <div class="field">
-          <label class="label" for="emailInput">이메일</label>
-          <div class="control">
-            <input
-              class="input"
-              id="emailInput"
-              type="email"
-              placeholder="abc@example.com"
-              autocomplete="on"
-            />
-          </div>
-        </div>
+    <section id="loginContainer">
+      <div class="loginWrap">
+        <h2><strong>LOGIN</strong></h2>
 
-        <div class="field mb-5">
-          <label class="label" for="passwordInput">비밀번호</label>
-          <div class="control">
-            <input
-              class="input"
-              id="passwordInput"
-              type="password"
-              placeholder="********"
-              autocomplete="on"
-            />
-          </div>
-        </div>
+        <article class="selectBtn">
+          <button type="button">회원 로그인</button>
+          <button type="button">비회원 로그인</button>
+        </article>
 
-        <button class="button is-info is-fullwidth" id="submitButton">
-          로그인하기
-        </button>
-      </form>
-    </div>
+        <form class="formWrap" id="loginForm">
+          <div>
+            <label class="hidden" for="emailInput">이메일</label>
+            <div class="inputCenter">
+              <input
+                class="input"
+                id="emailInput"
+                type="email"
+                placeholder="아이디"
+              />
+            </div>
+          </div>
+
+          <div>
+            <label class="hidden" for="passwordInput">비밀번호</label>
+            <div class="inputCenter">
+              <input
+                class="input"
+                id="passwordInput"
+                type="password"
+                placeholder="비밀번호"
+              />
+            </div>
+          </div>
+
+          <button class="submitBtn" id="submitButton">로그인</button>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
