--- a/src/views/register/register.css
+++ b/src/views/register/register.css
@@ -1,18 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Single+Day&family=Ubuntu:wght@300;400;500;700&display=swap");
-
-/* reset */
-a {
-  text-decoration: none;
-}
-a:link {
-  text-decoration: none;
-  color: black;
-}
-ol,
-ul,
-li {
-  list-style: none;
-}
+@import "utf-8";
+@import "../styles/reset.css";
 
 /* 레이아웃 */
 #headerWrap {
@@ -26,16 +13,18 @@ li {
   justify-content: space-around;
   align-items: center;
   height: 100px;
-  background-color: burlywood;
+
+  background: #8e2de2;
 }
 
 .headerTop img {
-  width: 44px;
-  height: 44px;
+  width: 260px;
+  height: 100%;
 }
 
 .headerTop h1 {
   font-size: 2em;
+  color: #fff;
 }
 
 .util ul {
@@ -43,16 +32,24 @@ li {
   gap: 20px;
 }
 
+.util ul li a {
+  color: #fff;
+  font-weight: 600;
+}
+
 /* GNB */
 .gnb {
-  background-color: #f0e3f9;
+  background-color: #fff;
   padding: 20px 0;
+  border-bottom: 4px solid #8e2de2;
 }
 
 .gnb ul {
   display: flex;
   justify-content: space-evenly;
 }
+
+/* 시작 */
 
 .register-user-form-container {
   display: flex;
