--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ojakku</title>
+    <title>sign up</title>
+
     <!-- 아이콘 -->
     <link
       rel="icon"
@@ -11,23 +12,22 @@
       sizes="16x16"
       href="../images/facon.ico"
     />
+
     <!-- bulma css 관련 -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
     />
+
     <!-- 폰트 어썸: 아이콘 -->
     <script
       defer
       src="https://kit.fontawesome.com/9daa42bcef.js"
       crossorigin="anonymous"
     ></script>
-    <!-- 구글 OAuth -->
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <!-- 카카오 OAuth -->
-    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="register.css" />
+    <link rel="stylesheet" href="./register.css" />
     <script src="register.js" type="module" defer></script>
   </head>
   <body>
@@ -35,7 +35,7 @@
     <header id="headerWrap">
       <nav>
         <div class="headerTop">
-          <img src="../elice-rabbit.png" alt="logo" />
+          <img src="../images/sample_logo.png" alt="logo" />
           <h1>오작뀨</h1>
 
           <div class="util">
@@ -58,10 +58,6 @@
           </ul>
         </div>
       </nav>
-
-      <article>
-        <img src="../images/visualBanner1.png" alt="visulaImage" />
-      </article>
     </header>
 
     <!-- 회원가입 폼(Form) -->
