Style 전체삭제 버튼 추가

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -64,15 +64,18 @@
     </header>
 
     <main role="main" id="mainWrap" class="container is-max-desktop">
-      <section class="title-sub block mt-6">
+      <section class="title-sub mt-6">
         <h2 class="title mb-6 has-text-grey-dark has-text-centered">
           장바구니
         </h2>
-        <p class="count-products subtitle has-text-right">
-          총&nbsp;
-          <span class="count-number">3</span>
-          개
-        </p>
+        <div class="mb-4 is-flex is-justify-content-space-between">
+          <p class="subtitle">
+            총&nbsp;
+            <span class="count-number">3</span>
+            개
+          </p>
+          <button class="button is-danger">전체삭제</button>
+        </div>
       </section>
 
       <section class="product-list block">
