--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -74,7 +74,7 @@
             <span class="count-number">3</span>
             개
           </p>
-          <button class="button is-danger">전체삭제</button>
+          <button class="button is-info is-light">전체삭제</button>
         </div>
       </section>
 
