--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -71,45 +71,57 @@
         <div class="mb-4 is-flex is-justify-content-space-between">
           <p class="subtitle">
             총&nbsp;
-            <span class="count-number">3</span>
+            <span id="numProducts">3</span>
             개
           </p>
-          <button class="button is-info is-light">전체삭제</button>
+          <button id="btnAllRemove" class="button is-info is-light">
+            전체삭제
+          </button>
         </div>
       </section>
 
       <section class="product-list block">
+        <!-- 첫번째 form에만 id가 지정되어 있습니다. -->
         <form
+          id="purchasing "
           class="box block columns is-flex is-align-items-center is-justify-content-space-between"
         >
           <div class="is-flex is-align-items-center">
             <figure class="image is-128x128 is-flex mr-2">
               <!-- src="../images/" -->
               <img
+                id="itemPreview"
                 src="https://bulma.io/images/placeholders/128x128.png"
                 class="mr-2"
               />
             </figure>
             <div>
-              <h3 class="title is-5">[9월탄생석] 쁘띠 디디 골드 목걸이</h3>
-              <p class="subtitle is-7">
+              <h3 id="txtId" class="title is-5">
+                [9월탄생석] 쁘띠 디디 골드 목걸이
+              </h3>
+              <p id="txtSubtitle" class="subtitle is-7">
                 9월의 탄생석 사파이어입니다. <br />
                 사파이어는 변치 않는 사랑을 약속하는 의미로. <br />
                 연인의 기념일에 어울리는 보석이에요.
               </p>
               <p class="subtitle is-7 tag is-link is-light">
-                <span>19,000</span>&nbsp;원
+                <span id="pricePerItem">19,000</span>&nbsp;원
               </p>
             </div>
           </div>
           <div
             class="block is-flex is-align-items-center is-justify-content-flex-end"
           >
-            <input class="input is-3 column mr-2" type="text" placeholder="0" />
-            <button class="delete column"></button>
+            <input
+              id="countItem"
+              class="input is-3 column mr-2"
+              type="text"
+              placeholder="0"
+            />
+            <button id="deleteItem" class="delete column"></button>
           </div>
         </form>
-
+        <!-- 추후 삭제 부분 START -->
         <form
           class="box block columns is-flex is-align-items-center is-justify-content-space-between"
         >
@@ -169,20 +181,21 @@
             <button class="delete column"></button>
           </div>
         </form>
+        <!-- 추후 삭제 부분 END -->
       </section>
       <section class="total mt-6">
         <div class="is-flex is-justify-content-space-between">
           <div class="block">
             <h3 class="title is-4 has-text-grey-dark">
-              총액:&nbsp;<span class="has-text-danger">19,000</span>&nbsp;원
+              총액:&nbsp;<span id="priceTotal" class="has-text-danger">19,000</span>&nbsp;원
             </h3>
             <p class="subtitle is-7"></p>
           </div>
-          <button class="button is-danger is-outlined px-6 py-5">
+          <button id="btnPurchase" class="button is-danger is-outlined px-6 py-5">
             결제하기
           </button>
         </div>
-        <button class="button is-danger is-outlined mb-4 px-5">
+        <button id="btnMoveToProductList" class="button is-danger is-outlined mb-4 px-5">
           더 구매하기
         </button>
       </section>
