Style: update id

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -71,7 +71,7 @@
         <div class="mb-4 is-flex is-justify-content-space-between">
           <p class="subtitle">
             총&nbsp;
-            <span id="numProducts">3</span>
+            <span id="countProduct">3</span>
             개
           </p>
           <button id="btnAllRemove" class="button is-info is-light">
@@ -187,15 +187,23 @@
         <div class="is-flex is-justify-content-space-between">
           <div class="block">
             <h3 class="title is-4 has-text-grey-dark">
-              총액:&nbsp;<span id="priceTotal" class="has-text-danger">19,000</span>&nbsp;원
+              총액:&nbsp;<span id="priceTotal" class="has-text-danger"
+                >19,000</span
+              >&nbsp;원
             </h3>
             <p class="subtitle is-7"></p>
           </div>
-          <button id="btnPurchase" class="button is-danger is-outlined px-6 py-5">
+          <button
+            id="btnPurchase"
+            class="button is-danger is-outlined px-6 py-5"
+          >
             결제하기
           </button>
         </div>
-        <button id="btnMoveToProductList" class="button is-danger is-outlined mb-4 px-5">
+        <button
+          id="btnMoveToProductList"
+          class="button is-danger is-outlined mb-4 px-5"
+        >
           더 구매하기
         </button>
       </section>
