Style:update naming id

--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -71,7 +71,7 @@
         <div class="mb-4 is-flex is-justify-content-space-between">
           <p class="subtitle">
             총&nbsp;
-            <span id="countProduct">3</span>
+            <span id="countAllItem">3</span>
             개
           </p>
           <button id="btnAllRemove" class="button is-info is-light">
@@ -118,7 +118,7 @@
               type="text"
               placeholder="0"
             />
-            <button id="deleteItem" class="delete column"></button>
+            <button id="btnDeleteItem" class="delete column"></button>
           </div>
         </form>
         <!-- 추후 삭제 부분 START -->
@@ -201,7 +201,7 @@
           </button>
         </div>
         <button
-          id="btnMoveToProductList"
+          id="btnMoveToItemList"
           class="button is-danger is-outlined mb-4 px-5"
         >
           더 구매하기
