--- a/src/views/components/header.html
+++ b/src/views/components/header.html
@@ -27,17 +27,17 @@
         justify-content: space-around;
         align-items: center;
         height: 100px;
-        background: #20002c;
+        background: #fff;
         }
 
         .headerTop img {
-        width: 260px;
+        width: 240px;
         height: 100%;
         }
 
         .headerTop h1 {
         font-size: 2em;
-        color: #fff;
+        color: #000;
         }
 
         .util ul {
@@ -46,7 +46,7 @@
         }
 
         .util ul li a {
-        color: #fff;
+        color: #000;
         font-weight: 600;
         }
 
