--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <header id="headerWrap">
+    <!-- <header id="headerWrap">
       <nav>
         <div class="headerTop">
           <img src="../images/sample_logo.png" alt="logo" />
@@ -51,7 +51,7 @@
           </ul>
         </div>
       </nav>
-    </header>
+    </header> -->
 
     <!-- 로그인 폼(Form) -->
     <section id="loginContainer">
