--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -13,165 +13,112 @@
       href="../images/facon.ico"
     />
 
-    <!-- bulma css 관련 -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
-    />
-
-    <!-- 폰트 어썸: 아이콘 -->
     <script
       defer
       src="https://kit.fontawesome.com/9daa42bcef.js"
       crossorigin="anonymous"
     ></script>
 
-    <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="./register.css" />
-    <script src="register.js" type="module" defer></script>
+    <script src="./register.js" type="module"></script>
   </head>
   <body>
     <!-- 헤더 -->
-    <header id="headerWrap">
-      <nav>
-        <div class="headerTop">
-          <img src="../images/sample_logo.png" alt="logo" />
-          <h1>오작뀨</h1>
-
-          <div class="util">
-            <ul>
-              <li><a href="/login">로그인</a></li>
-              <li><a href="/register">회원가입</a></li>
-              <li><a href="/cart">장바구니</a></li>
-              <li><a href="/mypage">내 정보</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="gnb">
-          <ul>
-            <li><a href="#">ABOUT US</a></li>
-            <li><a href="#">팔찌</a></li>
-            <li><a href="#">반지</a></li>
-            <li><a href="#">목걸이</a></li>
-            <li><a href="#">내 탄생석은?</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+    <div data-include-path="../components/header.html"></div>
 
     <!-- 회원가입 폼(Form) -->
-    <div class="register-user-form-container">
-      <form class="box register-user-form-box" id="registerUserForm">
-        <p class="title is-5 has-text-primary">환영합니다!</p>
-        <div class="field">
-          <label class="label" for="idInput">아이디</label>
-          <div class="control">
-            <input
-              class="input"
-              id="idInput"
-              type="text"
-              placeholder="elice"
-              autocomplete="on"
-            />
-          </div>
-        </div>
+    <section id="signupContainer">
+      <div class="signupWrap">
+        <h2><strong>회원가입</strong></h2>
 
-        <div class="field">
-          <label class="label" for="passwordInput">비밀번호</label>
-          <div class="control">
-            <input
-              class="input"
-              id="passwordInput"
-              type="password"
-              placeholder="********"
-              autocomplete="off"
-            />
+        <form class="formWrap" id="registerUserForm">
+          <div class="flexContent">
+            <label class="textLeft" for="idInput">아이디</label>
+            <div class="">
+              <input
+                class="input"
+                id="idInput"
+                type="text"
+                placeholder="elice"
+                autocomplete="on"
+              />
+            </div>
           </div>
-        </div>
-
-        <div class="field">
-          <label class="label" for="passwordConfirmInput">비밀번호 확인</label>
-          <div class="control">
-            <input
-              class="input"
-              id="passwordConfirmInput"
-              type="password"
-              placeholder="********"
-              autocomplete="off"
-            />
+  
+          <div class="">
+            <label class="" for="passwordInput">비밀번호</label>
+            <div class="">
+              <input
+                class="input"
+                id="passwordInput"
+                type="password"
+                placeholder="********"
+                autocomplete="off"
+              />
+            </div>
           </div>
-        </div>
-
-        <div class="field">
-          <label class="label" for="fullNameInput">이름</label>
-          <div class="control">
-            <input
-              class="input"
-              id="fullNameInput"
-              type="text"
-              placeholder="유재석"
-              autocomplete="on"
-            />
+  
+          <div class="">
+            <label  for="passwordConfirmInput">비밀번호 확인</label>
+            <div class="">
+              <input
+                class="input"
+                id="passwordConfirmInput"
+                type="password"
+                placeholder="********"
+                autocomplete="off"
+              />
+            </div>
           </div>
-        </div>
-
-        <div class="field">
-          <label class="label" for="emailInput">이메일</label>
-          <div class="control">
-            <input
-              class="input"
-              id="emailInput"
-              type="email"
-              placeholder="abc@example.com"
-              autocomplete="on"
-            />
+  
+          <div class="">
+            <label  for="fullNameInput">이름</label>
+            <div class="">
+              <input
+                class="input"
+                id="fullNameInput"
+                type="text"
+                placeholder="유재석"
+                autocomplete="on"
+              />
+            </div>
           </div>
-        </div>
-
-        <div class="field">
-          <label class="label" for="phonNumberInput">휴대폰 번호</label>
-          <div class="control">
-            <input
-              class="input"
-              id="phonNumberInput"
-              type="tel"
-              placeholder="01012341234"
-              autocomplete="off"
-            />
+  
+          <div class="">
+            <label  for="emailInput">이메일</label>
+            <div class="">
+              <input
+                class="input"
+                id="emailInput"
+                type="email"
+                placeholder="abc@example.com"
+                autocomplete="on"
+              />
+            </div>
           </div>
-        </div>
-
-        <div class="field">
-          <label class="label" for="addressInput">주소</label>
-          <div class="control">
-            <input
-              class="input"
-              id="addressInput"
-              type="text"
-              placeholder="OO시 OO구 OO동"
-              autocomplete="off"
-            />
+  
+          <div class="">
+            <label  for="phonNumberInput">휴대폰 번호</label>
+            <div class="">
+              <input
+                class="input"
+                id="phonNumberInput"
+                type="tel"
+                placeholder="01012341234"
+                autocomplete="off"
+              />
+            </div>
           </div>
-        </div>
+  
+  
+          <button class="button is-primary is-fullwidth" id="submitButton">
+            회원가입하기
+          </button>
+        </form>
+      </div>
 
-        <div class="field mb-5">
-          <label class="label" for="detailedAddressInput">상세주소</label>
-          <div class="control">
-            <input
-              class="input"
-              id="detailedAddressInput"
-              type="text"
-              placeholder=""
-              autocomplete="off"
-            />
-          </div>
-        </div>
+      <div data-include-path="../components/footer.html"></div>
 
-        <button class="button is-primary is-fullwidth" id="submitButton">
-          회원가입하기
-        </button>
-      </form>
-    </div>
+    </section>
   </body>
 </html>
