--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -29,7 +29,7 @@
     <!-- 회원가입 폼(Form) -->
     <section id="signupContainer">
       <div class="signupWrap">
-        <h2><strong>회원가입</strong></h2>
+        <h2><strong>SIGN UP</strong></h2>
 
         <form class="formWrap" id="registerUserForm">
           <div class="flexContent">
