--- a/src/views/register/register.html
+++ b/src/views/register/register.html
@@ -32,86 +32,86 @@
         <h2><strong>SIGN UP</strong></h2>
 
         <form class="formWrap" id="registerUserForm">
-          <div class="flexContent">
+          <div class="paddingContent">
             <p class="textLeft" ><label for="idInput">아이디</label></p>
             <div>
               <input
                 class="input"
                 id="idInput"
                 type="text"
-                placeholder="elice"
+                placeholder="아이디"
                 autocomplete="on"
               />
             </div>
           </div>
   
-          <div class="">
-            <label class="" for="passwordInput">비밀번호</label>
-            <div class="">
+          <div class="paddingContent">
+            <p class="textLeft" ><label for="passwordInput">비밀번호</label></p>
+            <div>
               <input
                 class="input"
                 id="passwordInput"
                 type="password"
-                placeholder="********"
+                placeholder="비밀번호"
                 autocomplete="off"
               />
             </div>
           </div>
   
-          <div class="">
-            <label  for="passwordConfirmInput">비밀번호 확인</label>
-            <div class="">
+          <div class="paddingContent">
+            <p class="textLeft" ><label  for="passwordConfirmInput">비밀번호 확인</label></p>
+            <div>
               <input
                 class="input"
                 id="passwordConfirmInput"
                 type="password"
-                placeholder="********"
+                placeholder="비밀번호 확인"
                 autocomplete="off"
               />
             </div>
           </div>
   
-          <div class="">
-            <label  for="fullNameInput">이름</label>
-            <div class="">
+          <div class="paddingContent">
+            <p class="textLeft" ><label  for="fullNameInput">이름</label></p>
+            <div>
               <input
                 class="input"
                 id="fullNameInput"
                 type="text"
-                placeholder="유재석"
+                placeholder="이름"
                 autocomplete="on"
               />
             </div>
           </div>
   
-          <div class="">
-            <label  for="emailInput">이메일</label>
-            <div class="">
+          <div class="paddingContent">
+            <p class="textLeft" ><label  for="emailInput">이메일</label></p>
+            <div>
               <input
                 class="input"
                 id="emailInput"
                 type="email"
-                placeholder="abc@example.com"
+                placeholder="email@example.com"
                 autocomplete="on"
               />
             </div>
           </div>
   
-          <div class="">
-            <label  for="phonNumberInput">휴대폰 번호</label>
-            <div class="">
+          <div class="paddingContent">
+            <p class="textLeft" ><label  for="phonNumberInput">휴대폰 번호</label></p>
+            <div>
               <input
                 class="input"
                 id="phonNumberInput"
                 type="tel"
-                placeholder="01012341234"
+                placeholder="010-3993-3263"
                 autocomplete="off"
               />
             </div>
           </div>
   
   
-          <button class="button is-primary is-fullwidth" id="submitButton">
+          <button class="submitBtn" id="submitButton">
             회원가입하기
           </button>
         </form>
