--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -11,7 +11,16 @@
 </head>
 <body>
     <div data-include-path="../components/header.html"></div>
+    <section class="container">
+        <div class="productImg">
+            
+        </div>
 
+        <div class="productDetail">
+
+        </div>
+        
+    </section>
  
 
     <div data-include-path="../components/footer.html"></div>
