--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -25,33 +25,7 @@
   </head>
   <body>
     <!-- 헤더 -->
-    <!-- <header id="headerWrap">
-      <nav>
-        <div class="headerTop">
-          <img src="../images/sample_logo.png" alt="logo" />
-          <h1>오작뀨</h1>
-
-          <div class="util">
-            <ul>
-              <li><a href="/login">로그인</a></li>
-              <li><a href="/register">회원가입</a></li>
-              <li><a href="/cart">장바구니</a></li>
-              <li><a href="/mypage">내 정보</a></li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="gnb">
-          <ul>
-            <li><a href="#">ABOUT US</a></li>
-            <li><a href="#">팔찌</a></li>
-            <li><a href="#">반지</a></li>
-            <li><a href="#">목걸이</a></li>
-            <li><a href="#">내 탄생석은?</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header> -->
+    <div data-include-path="../components/header.html"></div>
 
     <!-- 로그인 폼(Form) -->
     <section id="loginContainer">
