--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>제품 상세 페이지</title>
 
-    <!-- <link rel="stylesheet" href="../styles/reset.css"> -->
+    <link rel="stylesheet" href="../../styles/reset.css">
 
     <script src="product-detail.js" type="module"></script>
 </head>
 <body>
-    <div data-include-path="../components/header.html"></div>
+    <div data-include-path="../../components/header.html"></div>
     <section class="container">
         <div class="productImg">
 
@@ -23,7 +23,7 @@
     </section>
  
 
-    <div data-include-path="../components/footer.html"></div>
+    <div data-include-path="../../components/footer.html"></div>
 
     
 </body>
