--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -67,12 +67,14 @@
             결제하기
           </button>
         </div>
-        <button
-          id="btnMoveToItemList"
-          class="button is-danger is-outlined mb-4 px-5"
-        >
-          더 구매하기
-        </button>
+        <a href="/">
+          <button
+            id="btnMoveToItemList"
+            class="button is-danger is-outlined mb-4 px-5"
+          >
+            더 구매하기
+          </button>
+        </a>
       </section>
     </main>
 
