Detail Page Update

--- a/src/views/components/footer.html
+++ b/src/views/components/footer.html
@@ -12,8 +12,14 @@
         href="../images/facon.ico"
     />
     
-
     <link rel="stylesheet" type="style" href="../styles/reset.css">
+
+    <!-- 폰트 어썸 => 컴포넌트를 랜더링 할 때 script를 못 불러옴 -->
+    <script
+      defer
+      src="https://kit.fontawesome.com/9daa42bcef.js"
+      crossorigin="anonymous"
+    ></script>
 
     <style>
     /* 푸터 */
