--- a/src/views/components/header.html
+++ b/src/views/components/header.html
@@ -69,7 +69,7 @@
     <header id="headerWrap">
       <nav>
         <div class="headerTop">
-          <img src="../images/sample_logo.png" alt="logo" />
+          <img src="#" alt="logo" class="hidden"/>
           <h1><a href="/">오작뀨</a></h1>
 
           <div class="util">
