--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -84,7 +84,7 @@
       <section class="newArrival">
         <strong>NEW ARRIVAL</strong>
         <article class="productWrap">
-          <ul class="product" data-list = "[{},{}]"  >
+          <ul class="product">
             
           </ul>
         </article>
