--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -5,21 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>제품 상세 페이지</title>
 
-    <link rel="stylesheet" href="../../styles/reset.css">
+    <link rel="stylesheet" href="./product-detail.css">
 
     <script src="product-detail.js" type="module"></script>
 </head>
 <body>
     <div data-include-path="../../components/header.html"></div>
+
     <section class="container">
-        <div class="productImg">
+        <article class="detailWrap">
+            <div class="productImg">
 
-        </div>
+            </div>
 
-        <div class="productDetail">
+            <div class="productDetail">
 
-        </div>
-        
+            </div>
+        </article>    
     </section>
  
 
