--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>제품 리스트</title>
+    <title>제품 상세 페이지</title>
+
+    <link rel="stylesheet" href="../styles/reset.css">
+
 </head>
 <body>
+    <div data-include-path="../components/header.html"></div>
+    <section class="container">
+        <div id="product">
+            여기에 상품리스트를 불러옵니다.
+        </div>
+        
+        
+    </section>
     
+    
+    <div data-include-path="../components/footer.html"></div>
+    
+    
+    <script src="product.js" type="module"></script>
 </body>
 </html>
