Style: change file-name

--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -24,8 +24,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="./cart-order.css" />
-    <script src="cart-order.js" type="module" defer></script>
+    <link rel="stylesheet" href="./order.css" />
+    <script src="order.js" type="module" defer></script>
   </head>
 
   <body class="cartOrder">
