--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -60,12 +60,14 @@
             </h3>
             <p class="subtitle is-7"></p>
           </div>
-          <button
-            id="btnPurchase"
-            class="button is-danger is-outlined px-6 py-5"
-          >
-            결제하기
-          </button>
+          <a href="/order">
+            <button
+              id="btnPurchase"
+              class="button is-danger is-outlined px-6 py-5"
+            >
+              결제하기
+            </button>
+          </a>
         </div>
         <a href="/">
           <button
